--- a/index.html
+++ b/index.html
@@ -950,6 +950,9 @@
         search_name: "ค้นหาชื่อ/รหัสพนักงาน",
         total_label: "รวม",
         hide_table: "ซ่อนตาราง"
+        opt_build_att: "สร้างสรุปการเข้างาน (attendance_days) อัตโนมัติ",
+        late_cutoff: "เวลาเข้างานสายหลัง",
+        upload_btn: "อัปโหลดเข้าสู่ระบบ",
       },
       en: {
         title: "Attendance & Leave Review System",
@@ -998,6 +1001,9 @@
         search_name: "Search name / code",
         total_label: "Total",
         hide_table: "Hide table"
+        opt_build_att: "Build attendance summary automatically",
+        late_cutoff: "Late if after",
+        upload_btn: "Upload",
       },
       ja: {
         title: "出勤・休暇レビューシステム",
